--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
 <html lang="en" ⚠️amp="" html="⚠️amp">
-<head><script async="" src="https://cdn.ampproject.org/v0.js"></script>
+<head><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1325267672936174"
+     crossorigin="anonymous"></script>
 <meta charset="utf-8"/>
-<meta content="f963aa94a2290708396ab88c1d264afb" name="monetag"/>
+<meta name="google-adsense-account" content="ca-pub-1325267672936174">
 <title>ULTIMATE Gen Z Outfit Lender</title>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
 <style>
